[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/boulet_canon.png" type="Texture" id=1]
[ext_resource path="res://scripts/BouletCanon.gd" type="Script" id=2]
[ext_resource path="res://materials/boulet_canon.tres" type="PhysicsMaterial" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.1863

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.398026, 1 )
colors = PoolColorArray( 1, 0.981445, 0, 1, 1, 0.676758, 0, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.423767, 0.845455 ), -0.986241, -0.986241, 0, 0, Vector2( 0.995516, 0 ), 0.109582, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 16.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_random = 0.1
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[node name="BouletCanon" type="RigidBody2D" groups=[
"BouletCanon",
]]
collision_layer = 2147483650
collision_mask = 2
mass = 0.01
physics_material_override = ExtResource( 3 )
gravity_scale = 0.0
script = ExtResource( 2 )
impulse_force = 0.5

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 0.1, 0.1 )
amount = 100
lifetime = 1.5
preprocess = 1.0
visibility_rect = Rect2( -15.8723, -15.6992, 31.6871, 31.5235 )
local_coords = false
process_material = SubResource( 6 )

[node name="ImpulseTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true
autostart = true

[node name="ParticleTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="timeout" from="ImpulseTimer" to="." method="_on_ImpulseTimer_timeout"]
[connection signal="timeout" from="ParticleTimer" to="." method="_on_ParticleTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
